Allow multiple clients to connect to server